@@ -10,6 +10,12 @@ tasks.withType(JavaCompile).configureEach {
     options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
     options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
     options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED']
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED']
+    options.compilerArgs += ['-Xplugin:MetaConstantsPlugin']
 }
 
 dependencies {
